# nse-analyzer

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build_manager.sh  nse-batch-daily.yml  nserun.sh  tailwind.config.js
.github/workflows/: alert-deploy.yml  nse-batch-daily.yml  nse-batch-hourly.yml  tauri-build.yml  vercel_test.yml
backend/: .gitignore  Cargo.toml
backend/src/: api_server_axum.rs  app_config.rs  lib.rs  main.rs  models.rs  nse_client.rs  processor.rs  rules.rs  z_nse_mcx.sh
backend/src/mcx/: config.rs  mcx_api_server.rs  mcx_client.rs  mcx_commands.rs  mod.rs  models.rs  processor.rs  rules.rs
backend/src/nse/: config.rs  mod.rs  nse_api_server.rs  nse_client.rs  nse_commands.rs  processor.rs  rules.rs
backend/src/utility/: mod.rs  timing.rs
backend/tests/: tst_nse_processor.rs  tst_nse_rules.rs
electron/: main.js  package-lock.json  package.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/batch/: page.tsx
frontend/app/batch_mcx/: page.tsx
frontend/app/commodity/: page.tsx
frontend/app/components/: HistoricalDataModal.tsx  mcx_historicalDataModal.tsx  nse_historicalDataModal.tsx
frontend/app/lib/: api.ts  api_mcx.ts  api_nse.ts  db.ts  db_factory.ts  db_tauri.ts  platform.ts
frontend/app/security/: page.tsx
frontend/app/types/: api.ts  api_mcx_type.ts  api_nse_type.ts
frontend/bk_app_dynamic/: globals.css  layout.tsx
frontend/bk_app_dynamic/batch/: page.tsx
github-workflow-trigger/: commands.md  package.json  wrangler.toml
github-workflow-trigger/src/: index.js
src/: api_server_axum.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  nse_client.rs  processor.rs  rules.rs
tauri-app/: .gitignore  package-lock.json  package.json  setup.sh
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  store.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
(+2 files in other folders)
