[package]
name = "nse-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1"
colored = "3"
tokio-retry = "0.3"
rand = "0.8"
urlencoding = "2"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Optional: logging
tracing = "0.1"
tracing-subscriber = "0.3"