[package]
name = "nse-options-analyzer"
version = "1.0.0"
description = "NSE Options Analyzer - Advanced F&O analysis platform"
authors = ["NSE Options Team"]
license = "MIT"
repository = ""
edition = "2021"

# Tauri features
[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Additional utilities
dirs = "5.0"
log = "0.4"
env_logger = "0.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "nse-options-analyzer"
path = "src/main.rs"
